--- a/NFT Marketplace Landing/basics.scss
+++ b/NFT Marketplace Landing/basics.scss
@@ -2123,6 +2123,12 @@ color: #FFFFFF;
     }
 }
 
+@media only screen and (min-width: 1280px) {
+    #main_card_2 {
+        display: none;
+    }
+}
+
 
 
 
